desativado  tag e link de anuncio - public index.html e App.js

--- a/minha-landpage/public/index.html
+++ b/minha-landpage/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Proactive Solutions</title>
-    <script type="module" src="https://assets.r7.com/cda-ad-player/cda-ad-player/cda-ad-player.esm.js"></script>
+    <!--<script type="module" src="https://assets.r7.com/cda-ad-player/cda-ad-player/cda-ad-player.esm.js"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
